# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
#

2005-02-21 20:11:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      handlers, add new handler class MO (gettext)
    Revision:
      itools--main--0.7--patch-24


    new files:
     handlers/.arch-ids/MO.py.id handlers/MO.py

    modified files:
     Changelog handlers/PO.py handlers/__init__.py


2005-02-21 20:08:39 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23

    Summary:
      resources, add file like interface (read)
    Revision:
      itools--main--0.7--patch-23


    modified files:
     Changelog resources/base.py


2005-02-21 17:03:36 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-22

    Summary:
      simplify Luis patch, use get_abspath
    Revision:
      itools--main--0.7--patch-22


    modified files:
     Changelog __init__.py


2005-02-21 16:56:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-21

    Summary:
      merge from Luis branch (itools.__arch_revision__)
    Revision:
      itools--main--0.7--patch-21

    Patches applied:
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-6
       Allow to ask for the __arch_revision__ to the itools instance.
    

    modified files:
     Changelog __init__.py

    new patches:
     luis@itaapy.com--private/itools--luis--0.7--patch-6


2005-02-21 08:37:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-20

    Summary:
      merge from Luis branch (use distutils better)
    Revision:
      itools--main--0.7--patch-20

    Patches applied:
    
     * luis@itaapy.com--private/itools--luis--0.7--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.7--patch-16
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-1
       Add a commented line to allow a documentation with less pages
    
     * luis@itaapy.com--private/itools--luis--0.7--patch-2
       add a Changelog file in the source tree
    