@@ -116,6 +116,16 @@ class File(Handler):
         return self._data
 
 
+    #########################################################################
+    # API
+    #########################################################################
+    def copy_handler(self):
+        resource = memory.File(self.to_str())
+        return self.__class__(resource)
+        
+
+
+
 Handler.register_handler_class(File)
 
 
